# mspc-met-office-check

./: .gitignore  check.ipynb  main.py  met_office_audit.ipynb  met_office_audit.py  pyproject.toml
src/met_office_check/: __init__.py  aws.py  check.py
