[project]
name = "met-office-audit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "obstore>=0.9.2",
    "stactools-met-office-deterministic>=0.4.2",
    "tqdm>=4.67.3",
]
